Mon Nov  6 14:58:07 CEST 2000 <Daniel.Diaz@inria.fr>

	* improve dynamic clause management and fix a bug (memory leak)

Fri Nov  3 09:17:19 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix _ symbol prefix problem for Free BSD

Fri Oct 13 17:46:38 CEST 2000 <Daniel.Diaz@inria.fr>

	* no longer use dl_malloc on Linux but prevent MMAP using mallopt
	
Tue Sep 12 15:42:48 CEST 2000 <Daniel.Diaz@inria.fr>

	* full re-indentation of the sources for CVS

Thu Sep  7 18:04:15 CEST 2000 <Daniel.Diaz@inria.fr>

	* added acos/asin to Prolog arithmetics

Wed Sep  6 20:04:15 CEST 2000 <Daniel.Diaz@inria.fr>

	* port to alpha/linux - many thanks to:
	Alexander Diemand <ax@apax.net>
	* port to alpha/OSF1
	* port to mips/irix - many thanks to:
	Alexander Diemand <ax@apax.net>
	* fix a bug in stty.c (use standard termios if present)

Mon Jul 31 11:42:44 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix a bug in stty.c (use termio by default and else termios)

Thu Jul  6 11:38:58 CEST 2000 <Daniel.Diaz@inria.fr>

	* more customizable configuration/installation procedure

Mon Jun  3 19:57:20 CEST 2000 <Daniel.Diaz@inria.fr>

	* port for ix86/NetBSD - many thanks to:
	Brook Milligan <brook@nmsu.edu>

Wed Jun 28 11:38:37 CEST 2000 <Daniel.Diaz@inria.fr>

	* rename configuration file config.h by gp_config.h

Mon Jun 19 14:24:44 CEST 2000 <Daniel.Diaz@inria.fr>

	* avoid to establish a connection at start to get the hostname

Tue Jun  6 16:51:48 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix a bug in the compiler about \\ inside quoted atoms

Thu May  4 17:39:53 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix a bug in dynamic clause retraction (memory leak)

Wed Apr 26 10:51:53 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix a bug in dynamic clause retraction (memory leak)

Tue Apr 25 16:32:09 CEST 2000 <Daniel.Diaz@inria.fr>

	* fix a bug in atom management (existing atoms eat mallocated space)

Tue Apr 18 13:23:02 CEST 2000 <Daniel.Diaz@inria.fr>

	* added creation/1 and last_access/1 property to file_property/2
