@@ -399,16 +399,17 @@ In the C file \texttt{utils.c}:
 #include <string.h>
 #include "gprolog.h"
 
-Bool first_occurrence(char *str, int c, long *pos)
-
+Bool
+first_occurrence(char *str, int c, long *pos)
 {
- char *p;
+  char *p;
 
- if ((p=strchr(str,c))==NULL)         /* C does not appear in A */
-     return FALSE;                    /* fail */
+  p = strchr(str, c);
+  if (p == NULL)                /* C does not appear in A */
+    return FALSE;               /* fail */
 
- *pos=p-str;                          /* set the output argument */
- return TRUE;                         /* succeed */
+  *pos = p - str;               /* set the output argument */
+  return TRUE;                  /* succeed */
 }
 \end{verbatim}
 \end{Indentation}
@@ -458,26 +459,27 @@ In the C file \texttt{utils.c}:
 #include <string.h>
 #include "gprolog.h"
 
-Bool occurrence(char *str, int c, long *pos)
-
+Bool
+occurrence(char *str, int c, long *pos)
 {
- char **info_pos;
- char  *p;
+  char **info_pos;
+  char *p;
 
- info_pos=Get_Choice_Buffer(char **); /* recover the buffer */
+  info_pos = Get_Choice_Buffer(char **); /* recover the buffer */
 
- if (Get_Choice_Counter()==0)         /* first invocation ? */
-     *info_pos=str;
+  if (Get_Choice_Counter() == 0)        /* first invocation ? */
+    *info_pos = str;
 
- if ((p=strchr(*info_pos,c))==NULL)   /* C does not appear */
+  p = strchr(*info_pos, c);
+  if (p == NULL)                /* C does not appear */
     {
-     No_More_Choice();                /* remove choice-point */
-     return FALSE;                    /* fail */
+      No_More_Choice();         /* remove choice-point */
+      return FALSE;             /* fail */
     }
 
- *pos=p-str;                          /* set the output argument */
- *info_pos=p+1;                       /* update next starting pos */
- return TRUE;                         /* succeed */
+  *pos = p - str;               /* set the output argument */
+  *info_pos = p + 1;            /* update next starting pos */
+  return TRUE;                  /* succeed */
 }
 \end{verbatim}
 \end{Indentation}
@@ -517,33 +519,35 @@ Here is the corresponding definition of the C function:
 #include <string.h>
 #include "gprolog.h"
 
-Bool occurrence(char *str, int c, long *pos)
-
+Bool
+occurrence(char *str, int c, long *pos)
 {
- char **info_pos;
- char  *p;
+  char **info_pos;
+  char *p;
 
- info_pos=Get_Choice_Buffer(char **); /* recover the buffer */
+  info_pos = Get_Choice_Buffer(char **); /* recover the buffer */
 
- if (Get_Choice_Counter()==0)         /* first invocation ? */
+  if (Get_Choice_Counter() == 0) /* first invocation ? */
     {
-     if ((p=strchr(str,c))==NULL)     /* C does not appear at all */
+      p = strchr(str, c);
+      if (p == NULL)            /* C does not appear at all */
         {
-         No_More_Choice();            /* remove choice-point */
-         return FALSE;                /* fail */
+          No_More_Choice();     /* remove choice-point */
+          return FALSE;         /* fail */
         }
 
-     *info_pos=p;
+      *info_pos = p;
     }
-                                      /* info_pos = an occurrence */
- *pos=*info_pos-str;                  /* set the output argument */
+                                /* info_pos = an occurrence */
+  *pos = *info_pos - str;       /* set the output argument */
 
- if ((p=strchr(*info_pos+1,c))==NULL) /* no more occurrence */
-     No_More_Choice();                /* remove choice-point */
+  p = strchr(*info_pos + 1, c);
+  if (p == NULL)                /* no more occurrence */
+    No_More_Choice();           /* remove choice-point */
   else
-     *info_pos=p;                     /* else update next solution */
+    *info_pos = p;              /* else update next solution */
 
- return TRUE;                         /* succeed */
+  return TRUE;                  /* succeed */
 }
 \end{verbatim}
 \end{Indentation}
@@ -578,21 +582,21 @@ In the C file \texttt{utils.c}:
 \begin{verbatim}
 #include "gprolog.h"
 
-Bool Char_Ascii(FIOArg *c, FIOArg *ascii)
-
+Bool
+char_ascii(FIOArg *c, FIOArg *ascii)
 {
- if (!c->is_var)                      /* Char is not a variable */
+  if (!c->is_var)               /* Char is not a variable */
     {
-     ascii->unify=TRUE;               /* enforce unif. of Code */
-     ascii->value.l=c->value.l;       /* set Code */
-     return TRUE;                     /* succeed */
+      ascii->unify = TRUE;      /* enforce unif. of Code */
+      ascii->value.l = c->value.l; /* set Code */
+      return TRUE;              /* succeed */
     }
 
- if (ascii->is_var)                   /* Code is also a variable */
-     Pl_Err_Instantiation();          /* emit instantiation_error */
+  if (ascii->is_var)            /* Code is also a variable */
+    Pl_Err_Instantiation();     /* emit instantiation_error */
 
- c->value.l=ascii->value.l;           /* set Char */
- return TRUE;                         /* succeed */
+  c->value.l = ascii->value.l;  /* set Char */
+  return TRUE;                  /* succeed */
 }
 \end{verbatim}
 \end{Indentation}
@@ -891,6 +895,7 @@ void Check_For_Un_List(PlTerm term)
 \end{Indentation}
 
 \subsubsection{Creating Prolog terms}
+\label{Creating-Prolog-terms}
 These functions are provided to creates Prolog terms. Each function returns
 a \texttt{PlTerm} containing the created term.
 
@@ -1260,8 +1265,8 @@ The following functions allows a C function to call a Prolog predicate:
 
 \begin{Indentation}
 \begin{verbatim}
-int    Pl_Query_Start        (int functor, int arity, PlTerm *arg,
-                              Bool recoverable)
+void   Pl_Query_Begin        (Bool recoverable)
+int    Pl_Query_Call         (int functor, int arity, PlTerm *arg)
 int    Pl_Query_Next_Solution(void)
 void   Pl_Query_End          (int op)
 PlTerm Pl_Get_Exception      (void)
@@ -1273,8 +1278,9 @@ The invocation of a Prolog predicate should be done as follows:
 
 \begin{itemize}
 
-\item open a query using \texttt{Pl\_Query\_Start()} (computes the first
-solution)
+\item open a query using \texttt{Pl\_Query\_Begin()}
+
+\item compute the first solution using \texttt{Pl\_Query\_Call()}
 
 \item eventually compute next solutions using
 \texttt{Pl\_Query\_Next\_Solution()}
@@ -1283,13 +1289,19 @@ solution)
 
 \end{itemize}
 
-The function \texttt{Pl\_Query\_Start(functor, arity, arg, recoverable)} is
-used to initialize a query (computes the first solution). The arguments
-\texttt{functor}, \texttt{arity} and \texttt{arg} are similar to those of
-the functions handling complex terms \RefSP{Introduction:(Manipulating-Prolog-terms)}. The argument \texttt{recoverable} shall be set to
+The function \texttt{Pl\_Query\_Begin(recoverable)} is used to initialize a query. The argument \texttt{recoverable} shall be set to
 \texttt{TRUE} if the user wants to recover, at the end of the query, the
 memory space consumed by the query (in that case an additional choice-point
-is created). This functions returns:
+is created). All terms created in the heap, e.g. using \texttt{Mk\_...}
+family functions \RefSP{Creating-Prolog-terms}, after the invocation of
+\texttt{Pl\_Query\_Begin()} can be recovered when calling
+\texttt{Pl\_Query\_End(TRUE)} (see below).
+
+The function \texttt{Pl\_Query\_Call(functor, arity, arg)} calls a predicate
+passing arguments. It is then used to compute the first solution. The
+arguments \texttt{functor}, \texttt{arity} and \texttt{arg} are similar to
+those of the functions handling complex terms
+\RefSP{Introduction:(Manipulating-Prolog-terms)}. This function returns:
 
 \begin{itemize}
 
@@ -1309,7 +1321,7 @@ raised by \IdxPB{throw/1} \RefSP{catch/3}.
 The function \texttt{Pl\_Query\_Next\_Solution()} is used to compute a new
 solution. It must be only used if the result of the previous solution was
 \texttt{PL\_SUCCESS}. This functions returns the same kind of values as
-\texttt{Pl\_Query\_Start()} (see above).
+\texttt{Pl\_Query\_Call()} (see above).
 
 The function \texttt{Pl\_Query\_End(op)} is used to finish a query. This
 function mainly manages the remaining alternatives of the query. However,
@@ -1320,7 +1332,7 @@ correctly finish the query. The value of \texttt{op} is:
 
 \item \texttt{PL\_RECOVER}: to recover the memory space consumed by the
 query. After that the state of Prolog stacks is exactly the same as before
-opening the query. To use this option the query must have been opened
+opening the query. To use this option the query must have been initialized
 specifying \texttt{TRUE} for \texttt{recoverable} (see above).
 
 \item \texttt{PL\_CUT}: to cut remaining alternatives. The effect of this
@@ -1363,17 +1375,19 @@ In the C file \texttt{utils.c}:
 #include <string.h>
 #include "gprolog.h"
 
-Bool my_call(PlTerm goal)
+Bool
+my_call(PlTerm goal)
 
 {
- PlTerm *arg;
- int     functor, arity;
- int     result;
+  PlTerm *arg;
+  int functor, arity;
+  int result;
 
- arg=Rd_Callable_Check(goal, &functor, &arity);
- result=Pl_Query_Start(functor, arity, arg, FALSE);
- Pl_Query_End(PL_KEEP_FOR_PROLOG);
- return (result==PL_SUCCESS);
+  arg = Rd_Callable_Check(goal, &functor, &arity);
+  Pl_Query_Begin(FALSE);
+  result = Pl_Query_Call(functor, arity, arg);
+  Pl_Query_End(PL_KEEP_FOR_PROLOG);
+  return (result == PL_SUCCESS);
 }
 \end{verbatim}
 \end{Indentation}
@@ -1419,22 +1433,24 @@ continuation. This is what it is done by the following code:
 #include <string.h>
 #include "gprolog.h"
 
-Bool my_call(PlTerm goal)
-
+Bool
+my_call(PlTerm goal)
 {
- PlTerm *arg;
- int     functor, arity;
- int     result;
+  PlTerm *args;
+  int functor, arity;
+  int result;
 
- arg=Rd_Callable_Check(goal, &functor, &arity);
- result=Pl_Query_Start(functor, arity, arg, FALSE);
- Pl_Query_End(PL_KEEP_FOR_PROLOG);
- if (result==PL_EXCEPTION)
+  args = Rd_Callable_Check(goal, &functor, &arity);
+  Pl_Query_Begin(FALSE);
+  result = Pl_Query_Call(functor, arity, args);
+  Pl_Query_End(PL_KEEP_FOR_PROLOG);
+  if (result == PL_EXCEPTION)
     {
-     PlTerm except=Pl_Get_Exception();
-     Pl_Exec_Continuation(Find_Atom("throw"),1,&except);
+      PlTerm except = Pl_Get_Exception();
+      Pl_Exec_Continuation(Find_Atom("throw"), 1, &except);
     }
- return (result==PL_SUCCESS);
+
+  return result;
 }
 \end{verbatim}
 \end{Indentation}
@@ -1454,15 +1470,15 @@ Finally note that a simpler way to define \texttt{my\_call/1} is to use
 #include <string.h>
 #include "gprolog.h"
 
-Bool my_call(PlTerm goal)
-
+Bool
+my_call(PlTerm goal)
 {
- PlTerm *args;
- int    functor,arity;
+  PlTerm *args;
+  int functor, arity;
 
- args=Rd_Callable_Check(goal, &functor, &arity);
- Pl_Exec_Continuation(functor, arity, args);
- return TRUE;
+  args = Rd_Callable_Check(goal, &functor, &arity);
+  Pl_Exec_Continuation(functor, arity, args);
+  return TRUE;
 }
 \end{verbatim}
 \end{Indentation}
@@ -1483,36 +1499,36 @@ In the C file \texttt{utils.c}:
 #include <string.h>
 #include "gprolog.h"
 
-Bool all_op(PlTerm list)
-
+Bool
+all_op(PlTerm list)
 {
- PlTerm op[1024];
- PlTerm args[3];
- int    n=0;
- int    result;
+  PlTerm op[1024];
+  PlTerm args[3];
+  int n = 0;
+  int result;
 
- args[0]=Mk_Variable();
- args[1]=Mk_Variable();
- args[2]=Mk_Variable();
- result=Pl_Query_Start(Find_Atom("current_op"), 3, args, TRUE);
- while(result)
+  Pl_Query_Begin(TRUE);
+  args[0] = Mk_Variable();
+  args[1] = Mk_Variable();
+  args[2] = Mk_Variable();
+  result = Pl_Query_Call(Find_Atom("current_op"), 3, args);
+  while (result)
     {
-     op[n++]=Mk_Atom(Rd_Atom(args[2])); /* arg #2 is the name of the op */
-     result=Pl_Query_Next_Solution();
+      op[n++] = Mk_Atom(Rd_Atom(args[2])); /* arg #2 is the name of the op */
+      result = Pl_Query_Next_Solution();
     }
- Pl_Query_End(PL_RECOVER);
+  Pl_Query_End(PL_RECOVER);
 
- return Un_Proper_List_Check(n, op, list);
+  return Un_Proper_List_Check(n, op, list);
 }
 \end{verbatim}
 \end{Indentation}
 
-Note that we know here that there is no source for exception. In that
-case the result of \texttt{Pl\_Query\_Start} and \texttt{Pl\_Query\_End} can
-be considered as a boolean.
+Note that we know here that there is no source for exception. In that case
+the result of \texttt{Pl\_Query\_Call} and \texttt{Pl\_Query\_Next\_Solution}
+can be considered as a boolean.
 
-The compilation produces an executable called
-\texttt{prog}:
+The compilation produces an executable called \texttt{prog}:
 
 \OneLine{\% gplc prog.pl utils.c}
 
@@ -1578,30 +1594,31 @@ Here is the definition of the default GNU Prolog \texttt{main()} function:
 
 \begin{Indentation}
 \begin{verbatim}
-int main(int argc, char *argv[])
-
+int
+main(int argc, char *argv[])
 {
- int  nb_user_directive;
- Bool top_level;
+  int nb_user_directive;
+  Bool top_level;
 
- nb_user_directive=Start_Prolog(argc, argv);
+  nb_user_directive = Start_Prolog(argc, argv);
 
- top_level=Try_Execute_Top_Level();
+  top_level = Try_Execute_Top_Level();
 
- Stop_Prolog();
+  Stop_Prolog();
 
- if (top_level)
-     return 0;
+  if (top_level)
+    return 0;
 
- if (nb_user_directive)
-     return 0;
+  if (nb_user_directive)
+    return 0;
 
- printf("Warning: no initial goal executed\n"
-        "   use a directive :- initialization(Goal)\n"
-        "   or remove the link option --no-top-level"
-        " (or --min-bips or --min-size)\n");
+  fprintf(stderr,
+          "Warning: no initial goal executed\n"
+          "   use a directive :- initialization(Goal)\n"
+          "   or remove the link option --no-top-level"
+          " (or --min-bips or --min-size)\n");
 
- return 1;
+  return 1;
 }
 \end{verbatim}
 \end{Indentation}
@@ -1634,45 +1651,47 @@ query: \texttt{anc(Result, Name)}).
 
 \begin{Indentation}
 \begin{verbatim}
-int main(int argc, char *argv[])
-
+int
+main(int argc, char *argv[])
 {
- int     func;
- WamWord arg[10];
- char    str[100];
- char   *sol[100];
- int     i,nb_sol=0;
- Bool    res;
+  int func;
+  WamWord arg[10];
+  char str[100];
+  char *sol[100];
+  int i, nb_sol = 0;
+  Bool res;
 
- Start_Prolog(argc,argv);
+  Start_Prolog(argc, argv);
 
- func=Find_Atom("anc");
- for(;;)
+  func = Find_Atom("anc");
+  for (;;)
     {
-     printf("\nEnter a name (or 'end' to finish): ");
-     scanf("%s",str);
+      printf("\nEnter a name (or 'end' to finish): ");
+      scanf("%s", str);
 
-     if (strcmp(str, "end")==0)
-         break;
+      if (strcmp(str, "end") == 0)
+        break;
 
-     arg[0]=Mk_Variable();
-     arg[1]=Mk_String(str);
-     nb_sol=0;
-     res=Pl_Query_Start(func, 2, arg, TRUE);
-     while(res)
+      Pl_Query_Begin(TRUE);
+
+      arg[0] = Mk_Variable();
+      arg[1] = Mk_String(str);
+      nb_sol = 0;
+      res = Pl_Query_Call(func, 2, arg);
+      while (res)
         {
-         sol[nb_sol++]=Rd_String(arg[0]);
-         res=Pl_Query_Next_Solution();
+          sol[nb_sol++] = Rd_String(arg[0]);
+          res = Pl_Query_Next_Solution();
         }
-     Pl_Query_End(PL_RECOVER);
+      Pl_Query_End(PL_RECOVER);
 
-     for(i=0;i<nb_sol;i++)
-         printf("  solution: %s\n", sol[i]);
-     printf("%d solution(s)\n", nb_sol);
+      for (i = 0; i < nb_sol; i++)
+        printf("  solution: %s\n", sol[i]);
+      printf("%d solution(s)\n", nb_sol);
     }
 
- Stop_Prolog();
- return 0;     
+  Stop_Prolog();
+  return 0;
 }
 \end{verbatim}
 \end{Indentation}
