@@ -107,7 +107,12 @@ int Type_Of_Term(WamWord start_word);
 
 void Pl_Exec_Continuation(int func, int arity, WamWord *arg_adr);
 
-int Pl_Query_Start(int func, int arity, WamWord *arg_adr, Bool recoverable);
+void Pl_Query_Begin(Bool recoverable);
+
+int Pl_Query_Call(int func, int arity, WamWord *arg_adr);
+
+#define Pl_Query_Start(func, arity, arg_adr, recoverable) \
+ (Pl_Query_Begin(recoverable), Pl_Query_Call(func, arity, arg_adr))
 
 int Pl_Query_Next_Solution(void);
 
