@@ -1,3 +1,7 @@
+Tue Nov  7 15:12:11 CEST 2000 <Daniel.Diaz@inria.fr>
+
+	* modify C->Prolog foreign interface to recover arguments space
+
 Mon Nov  6 14:58:07 CEST 2000 <Daniel.Diaz@inria.fr>
 
 	* improve dynamic clause management and fix a bug (memory leak)
